# ufc-prediction-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260111_0142_221dd94ffc22_initial_schema.py  20260111_0412_d0be2e5f580c_add_performance_indexes.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: events.py  fighters.py  fights.py  predictions.py
app/api/v1/schemas/: __init__.py  common.py  event.py  fight.py  fighter.py  prediction.py
app/core/: caching.py  config.py  exceptions.py  middleware.py  redis.py
app/data_pipeline/: __init__.py  import_service.py  orchestrator.py  snapshot_calculator.py  transformers.py
app/data_pipeline/adapters/: __init__.py  base.py  espn.py  kaggle.py  ufc.py
app/db/: base.py  session.py
app/db/models/: __init__.py  data_import.py  event.py  fight.py  fighter.py  fighter_snapshot.py  prediction.py
app/prediction_engine/: __init__.py  confidence.py  engine.py  feature_extractor.py  predictor.py  weights.py
app/repositories/: __init__.py  base.py  event.py  fight.py  fighter.py  prediction.py
docker/: docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf
scripts/: backtest.py  calculate_snapshots.py  import_kaggle.py
tests/: conftest.py  test_phase2_pipeline.py
tests/fixtures/: sample_fights.csv
tests/integration/: test_events_api.py  test_fighters_api.py  test_fights_api.py  test_health_api.py  test_predictions_api.py
tests/unit/: test_prediction_engine.py
